--- a/_talks/2016-12-05-poster-1.md
+++ b/_talks/2016-12-05-poster-1.md
@@ -5,7 +5,7 @@ collection: talks
 type: "Poster"
 permalink: /talks/2016-poster-1
 venue: "Third Italian Conference on Computational Linguistics"
-date: 2016
+date: 2016-12-05
 location: "Napoli, Italy"
 ---
 
