--- a/_talks/2016-12-05-poster-1.md
+++ b/_talks/2016-12-05-poster-1.md
@@ -3,7 +3,7 @@ title: "Emojitalianobot and EmojiWorldBot - New online tools
 and digital environments for translation into emoji"
 collection: talks
 type: "Poster"
-permalink: /talks/2016-poster-1
+permalink: /talks/2016-12-05-poster-1
 venue: "Third Italian Conference on Computational Linguistics"
 date: 2016-12-05
 location: "Napoli, Italy"
