--- a/_talks/2019-11-12-poster-4.md
+++ b/_talks/2019-11-12-poster-4.md
@@ -2,10 +2,10 @@
 title: "Structural Connectome Fingerprinting"
 collection: talks
 type: "Poster"
-permalink: /talks/2017-06-12-poster-3
-venue: "6th biennial Canadian Discrete and Algorithmic Mathematics Conference (CanaDAM)"
-date: 2017-06-12
-location: "Honolulu, Hawaii"
+permalink: /talks/2019-11-12-poster-4
+venue: "Students of Brain Research (SOBR) 2019 Student Symposium"
+date: 2019-11-12
+location: "The Melbourne Brain Centre in Parkville, Victoria, Australia"
 ---
 
 ### Introduction:
