--- a/_talks/2019-11-12-poster-4.md
+++ b/_talks/2019-11-12-poster-4.md
@@ -8,6 +8,10 @@ date: 2019-11-12
 location: "The Melbourne Brain Centre in Parkville, Victoria, Australia"
 ---
 
+Best graphical abstract award:
+
+![Graphical abstract](images/sobr2019.jpg)
+
 ### Introduction:
 
 Connectome fingerprinting, the process of identification and characterization of individuals from their brain activity data, has recently garnered significant attention. It has been shown that functional magnetic resonance imaging (fMRI) recordings of individuals carry unique information that not only acts as an identifier but can also reflect cognitive abilities such as fluid intelligence. Although substantial research regarding fingerprinting has been conducted using fMRI, the extant literature using white-matter tractography does not adequately leverage structural connectivity for the purpose of fingerprinting.
