--- a/_talks/2019-11-12-poster-4.md
+++ b/_talks/2019-11-12-poster-4.md
@@ -8,9 +8,9 @@ date: 2019-11-12
 location: "The Melbourne Brain Centre in Parkville, Victoria, Australia"
 ---
 
-Best graphical abstract award:
+* Best graphical abstract award
 
-![Graphical abstract](images/sobr2019.jpg)
+![Graphical abstract](/images/sobr2019.jpg)
 
 ### Introduction:
 
