--- a/_publications/2020-03-30-paper-1.md
+++ b/_publications/2020-03-30-paper-1.md
@@ -10,4 +10,8 @@ citation: 'Rakesh, Divyangana, Kavisha B. Fernando, and Sina Mansour L. &quot;Fu
 ---
 
 [Article available from here.](https://doi.org/10.1152/jn.00039.2020)
+
+## Abstract:
+
+Nonpathological aging is associated with significant cognitive deficits. Thus, the underlying neurobiology of aging-associated cognitive decline warrants investigation. In a recent study, Chong et al. (Chong JSX, Ng KK, Tandi J, Wang C, Poh J-H, Lo JC, Chee MWL, Zhou JH. J Neurosci 39: 5534–5550, 2019) provided insights into the association between cognitive decline and the loss of functional specialization in the brains of older adults. Here, we introduce the novel graph theoretical approach utilized and discuss the significance of their findings and broader implications on aging. We also provide alternate perspectives of their findings and suggest directions for future work.
  
