--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,30 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Hello World!'
+date: 2020-02-08
+permalink: /posts/2020/02/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - notes
+  - tutorial
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+In my first blog post ever, I decided to provide a short description of how I prepared this website to be served over Github pages.
 
-Headings are cool
-======
+## Professional website template
 
-You can have many headings
-======
+Like many, I had a very limited time and could not afford to spend much time on creating a fully functional professional website from scratch. Hence I decided to look for a website template that is suited to my needs, i.e. an academic website. I was also looking for a low-maintenance hosting service. I basically did not want to have to worry about getting a domain and a server to host my website on. I was able to find a fast solution that suited my needs thanks to Jekyll and Github pages.
 
-Aren't headings cool?
-------
+If you're also interested in building a personal academic website in a similar fashion this solution may suit you.
+
+Now you would still need to know a little bit about web development to be able to get everything up and running. However, compared to a web development from scratch this is going to be way faster.
+
+Here are the steps that I took:
+
+* I first forked this [fantastic academic website template](https://github.com/academicpages/academicpages.github.io). Please note that a more thorough instruction on how to use the template has been provided in the template's git repository. This blog post is just a short summary of what I did which could act as a teaser for you to go ahead and read their carefully written instrucions.
+* I then cloned the repository locally to be able to edit the content and add what I want to the website.
+* I then started changing the files as instructed by the template's instructions. You could also take this one step further and build extra features into the existing template if you like.
+* In order to serve the website using github pages, you would need to rename the repository to "[your GitHub username].github.io" and enable Github pages from the settings.
+* Furthermore, in order to test the changes I make to the website locally and make a bunch of modifications together and push in a single commit, I installed Jekyll and Bundle locally. This made development of the website much easier.
+
+That's all! Believe me it's nearly as simple as that!
+
+I hope you enjoy building your website with [academicpages](https://github.com/academicpages/)' academic website template too.
