fixed conference talk info for ISMRM

--- a/_talks/2020-08-08-poster-6.md
+++ b/_talks/2020-08-08-poster-6.md
@@ -3,7 +3,7 @@ title: "Prediction-Identification Landscape for Brain Structure and Connectivity
 collection: talks
 type: "Poster"
 permalink: /talks/2020-08-08-poster-6
-venue: "29th Annual Computational Neuroscience Meeting, Organization for Computational Neuroscience (OCNS)"
+venue: "ISMRM & SMRT Virtual Conference"
 date: 2020-08-08
 location: "Online"
 ---
