updated the link for OHBM 2023 poster and talk

--- a/_talks/2023-07-23-poster-22.md
+++ b/_talks/2023-07-23-poster-22.md
@@ -8,4 +8,4 @@ date: 2023-07-23
 location: "Montreal, Canada"
 ---
 
-This poster presentation ([available online](https://github.com/sina-mansour/OHBM_2023/tree/main/UKB_connectome_resource)) introduced our release of more than 10TB of brain connectivity data for the UK biobank project.
+This poster presentation ([available online](https://sina-mansour.github.io/OHBM_2023/UKB_connectome_resource/)) introduced our release of more than 10TB of brain connectivity data for the UK biobank project.
