--- a/_talks/2023-07-25-poster-23.md
+++ b/_talks/2023-07-25-poster-23.md
@@ -9,7 +9,7 @@ location: "Montreal, Canada"
 ---
 
 
-A featured talk at the symposium on *Inference on the Brain, advances and practices in brain activity inference*.
+A featured talk at the symposium on [*Inference on the Brain, advances and practices in brain activity inference*](https://sina-mansour.github.io/OHBM_2023/Brain_Inference_Symposium/).
 
 This talk, provided insights on how high-resolution connectomics can enable anatomically-informed inference of brain activation.
 
